--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
   <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/chrome-platform-analytics/google-analytics-bundle.js"></script>
+  <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
