--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,6 @@
   <script src="scripts/services/product-profile-factory.js"></script>
   <script src="scripts/services/app-config-service.js"></script>
   <script src="scripts/services/utility.js"></script>
-  <script src="scripts/services/i18n.js"></script>
   <script src="scripts/services/sync-service.js"></script>
   <script src="scripts/services/inventoryrulesfactory.js"></script>
   <script src="scripts/services/stock-out-broadcast-factory.js"></script>
@@ -105,8 +104,8 @@
   <script src="scripts/services/chrome-storage-api.js"></script>
   <script src="scripts/services/analytics-sync-service.js"></script>
   <script src="scripts/services/location-service.js"></script>
+  <script src="scripts/services/message.js"></script>
   <script src="scripts/directives/counter.js"></script>
-  <script src="scripts/directives/i18n.js"></script>
   <script src="scripts/directives/analytics.js"></script>
   <script src="scripts/decorators/exceptionhandler-decorator.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
