--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
 </head>
 <body>
   <div ui-view></div>
+  <!-- comments:uncomment-block html -->
+  <!-- <script src="cordova.js"></script> -->
+  <!-- endcomments -->
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="bower_components/angular/angular.js"></script>
