chore(cordova): add CSP tag for whitelist plugin

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Nigeria LMIS</title>
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:35729; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' ws://localhost:35729 http://lomis.ehealth.org.ng:5984 http://dev.lomis.ehealth.org.ng:5984">
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
