--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="lmisChromeApp">
+<html>
 <head>
   <meta charset="utf-8">
   <title>Nigeria LMIS</title>
@@ -109,6 +109,7 @@
   <script src="scripts/directives/analytics.js"></script>
   <script src="scripts/decorators/exceptionhandler-decorator.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
+  <script src="scripts/bootstrap.js"></script>
   <!-- endbuild -->
 </body>
 </html>
