WIP: Authentication. Issue #52

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,10 @@
   <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+  <script src="bower_components/localforage/dist/localforage.js"></script>
+  <script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.js"></script>
+  <script src="bower_components/angular-eha.login-service/dist/login-service.js"></script>
+  <script src="bower_components/angular-eha.retriable/dist/retriable.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -104,6 +108,7 @@
   <script src="scripts/services/memory-storage-service.js"></script>
   <script src="scripts/services/background-sync-service.js"></script>
   <script src="scripts/services/location-service.js"></script>
+  <script src="scripts/services/login-dialog-service.js"></script>
   <script src="scripts/services/messages.js"></script>
   <script src="scripts/directives/counter.js"></script>
   <script src="scripts/directives/analytics.js"></script>
