refactor: use packaged online-badge
Closes #19.

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.js"></script>
   <script src="bower_components/angular-eha.login-service/dist/login-service.js"></script>
   <script src="bower_components/angular-eha.retriable/dist/retriable.js"></script>
+  <script src="bower_components/angular-eha.online-badge/online-badge.template.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
