refactor(analytics): use extracted module
Closes #77.

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <script src="bower_components/angular-eha.login-service/dist/login-service.js"></script>
   <script src="bower_components/angular-eha.retriable/dist/retriable.js"></script>
   <script src="bower_components/angular-eha.online-badge/online-badge.template.js"></script>
+  <script src="bower_components/angular-eha.cordova.google-analytics/cordova.google-analytics.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -102,7 +103,6 @@
   <script src="scripts/services/alert-factory.js"></script>
   <script src="scripts/services/cache-service.js"></script>
   <script src="scripts/services/ccu-profile-factory.js"></script>
-  <script src="scripts/services/tracking-service.js"></script>
   <script src="scripts/services/fixture-loader-service.js"></script>
   <script src="scripts/services/pouch-storage-service.js"></script>
   <script src="scripts/services/memory-storage-service.js"></script>
@@ -111,8 +111,6 @@
   <script src="scripts/services/login-dialog-service.js"></script>
   <script src="scripts/services/messages.js"></script>
   <script src="scripts/directives/counter.js"></script>
-  <script src="scripts/directives/analytics.js"></script>
-  <script src="scripts/decorators/exceptionhandler-decorator.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
   <script src="scripts/bootstrap.js"></script>
   <!-- endbuild -->
