refactor(app-config): modularise states
Closes #192.

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,10 @@
   <script src="scripts/config.js"></script>
   <script src="scripts/translations.js"></script>
   <script src="scripts/db.js"></script>
+  <script src="scripts/states/app-config/index.js"></script>
+  <script src="scripts/states/app-config/welcome.js"></script>
+  <script src="scripts/states/app-config/wizard.js"></script>
+  <script src="scripts/states/app-config/edit.js"></script>
   <script src="scripts/controllers/home.js"></script>
   <script src="scripts/controllers/stock-count.js"></script>
   <script src="scripts/controllers/app-config.js"></script>
