style: modularise configs

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,10 @@
   <script src="scripts/config.js"></script>
   <script src="scripts/translations.js"></script>
   <script src="scripts/db.js"></script>
+  <script src="scripts/configs/growl.js"></script>
+  <script src="scripts/configs/pouchdb.js"></script>
+  <script src="scripts/configs/eha-login-service.js"></script>
+  <script src="scripts/configs/eha-google-analytics.js"></script>
   <script src="scripts/states/app-config/index.js"></script>
   <script src="scripts/states/app-config/welcome.js"></script>
   <script src="scripts/states/app-config/wizard.js"></script>
