refactor: replace growl with toastr
Closes #28.

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/bootstrap-theme-cosmo/cosmo.min.css" />
   <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css" />
-  <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.css" />
+  <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css({.tmp,app}) styles/main.css -->
@@ -33,7 +33,6 @@
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/nvd3/nv.d3.js"></script>
   <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
-  <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
   <script src="bower_components/localforage/dist/localforage.js"></script>
@@ -42,6 +41,7 @@
   <script src="bower_components/angular-eha.retriable/dist/retriable.js"></script>
   <script src="bower_components/angular-eha.online-badge/online-badge.template.js"></script>
   <script src="bower_components/angular-eha.cordova.google-analytics/cordova.google-analytics.js"></script>
+  <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -49,7 +49,6 @@
   <script src="scripts/config.js"></script>
   <script src="scripts/translations.js"></script>
   <script src="scripts/db.js"></script>
-  <script src="scripts/configs/growl.js"></script>
   <script src="scripts/configs/pouchdb.js"></script>
   <script src="scripts/configs/eha-login-service.js"></script>
   <script src="scripts/configs/eha-google-analytics.js"></script>
