--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap-theme-cosmo/cosmo.min.css" />
   <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css" />
   <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+  <link rel="stylesheet" href="bower_components/angular-eha.counter/counter.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css({.tmp,app}) styles/main.css -->
@@ -42,6 +43,7 @@
   <script src="bower_components/angular-eha.online-badge/online-badge.template.js"></script>
   <script src="bower_components/angular-eha.cordova.google-analytics/cordova.google-analytics.js"></script>
   <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+  <script src="bower_components/angular-eha.counter/counter.template.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -52,6 +54,7 @@
   <script src="scripts/configs/pouchdb.js"></script>
   <script src="scripts/configs/eha-login-service.js"></script>
   <script src="scripts/configs/eha-google-analytics.js"></script>
+  <script src="scripts/configs/eha-counter.js"></script>
   <script src="scripts/states/app-config/index.js"></script>
   <script src="scripts/states/app-config/welcome.js"></script>
   <script src="scripts/states/app-config/wizard.js"></script>
@@ -105,7 +108,6 @@
   <script src="scripts/services/location-service.js"></script>
   <script src="scripts/services/login-dialog-service.js"></script>
   <script src="scripts/services/messages.js"></script>
-  <script src="scripts/directives/counter.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
   <script src="scripts/bootstrap.js"></script>
   <!-- endbuild -->
