--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
   <script src="scripts/services/login-dialog-service.js"></script>
   <script src="scripts/services/messages.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
+  <script src="scripts/services/app-service.js"></script>
   <script src="scripts/bootstrap.js"></script>
   <!-- endbuild -->
 </body>
