refactor: use extracted login dialog
See: https://github.com/eHealthAfrica/angular-eha.login-dialog

Closes #207.

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
   <script src="bower_components/angular-eha.cordova.google-analytics/cordova.google-analytics.js"></script>
   <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="bower_components/angular-eha.counter/counter.template.js"></script>
+  <script src="bower_components/angular-eha.login-dialog/login-dialog.template.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -71,7 +72,6 @@
   <script src="scripts/controllers/index.js"></script>
   <script src="scripts/controllers/stock-out-broadcast.js"></script>
   <script src="scripts/controllers/waste-count.js"></script>
-  <script src="scripts/controllers/login.js"></script>
   <script src="scripts/services/bundle-service.js"></script>
   <script src="scripts/services/batch-service.js"></script>
   <script src="scripts/services/notification-service.js"></script>
@@ -107,7 +107,6 @@
   <script src="scripts/services/memory-storage-service.js"></script>
   <script src="scripts/services/background-sync-service.js"></script>
   <script src="scripts/services/location-service.js"></script>
-  <script src="scripts/services/login-dialog-service.js"></script>
   <script src="scripts/services/messages.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
   <script src="scripts/services/app-service.js"></script>
