added consumption module

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
   <script src="scripts/states/app-config/edit.js"></script>
   <script src="scripts/states/home/index.js"></script>
   <script src="scripts/states/home/contact.js"></script>
+  <script src="scripts/states/consumption/consumption.js"></script>
   <script src="scripts/states/home/main-activity.js"></script>
   <script src="scripts/controllers/stock-count.js"></script>
   <script src="scripts/controllers/app-config.js"></script>
@@ -72,6 +73,7 @@
   <script src="scripts/controllers/index.js"></script>
   <script src="scripts/controllers/stock-out-broadcast.js"></script>
   <script src="scripts/controllers/waste-count.js"></script>
+  <script src="scripts/controllers/consumption.js"></script>
   <script src="scripts/services/bundle-service.js"></script>
   <script src="scripts/services/batch-service.js"></script>
   <script src="scripts/services/notification-service.js"></script>
@@ -110,6 +112,7 @@
   <script src="scripts/services/messages.js"></script>
   <script src="scripts/services/vvm-options.js"></script>
   <script src="scripts/services/app-service.js"></script>
+  <script src="scripts/services/consumption-service.js"></script>
   <script src="scripts/bootstrap.js"></script>
   <!-- endbuild -->
 </body>
