changed local devices plugin github repo

--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,8 @@
   <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
-  <script src="bower_components/localforage/dist/localforage.js"></script>
   <script src="bower_components/pouchdb-authentication/dist/pouchdb.authentication.js"></script>
+  <script src="bower_components/pouchdb-upsert/dist/pouchdb.upsert.min.js"></script>
   <script src="bower_components/angular-eha.login-service/dist/login-service.js"></script>
   <script src="bower_components/angular-eha.retriable/dist/retriable.js"></script>
   <script src="bower_components/angular-eha.online-badge/online-badge.template.js"></script>
