--- a/features.html
+++ b/features.html
@@ -18,11 +18,19 @@
 <body>
 <section class="herosection">
   <div class="content-wrap">
-  <nav class="navbar navbar-default move-nav">
+  <nav class="navbar navbar-move">
   <div class="container-fluid">
   <div class="navbar-header">
-  <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/logo-Inventory-orange.jpg" width="75%" class="brandlogo"></a>
-  <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+  <a class="navbar-brand navbar-link" href="index.html">
+    <img src="assets/img/logo-Inventory-orange.jpg" width="100%" class="brandlogo">
+  </a>
+  <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+    <span class="sr-only">Toggle navigation</span>
+    <i class="fa fa-bars fa-border"></i>
+    <!-- <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span> -->
+  </button>
   </div>
 
   <div class="collapse navbar-collapse" id="navcol-1">
@@ -31,7 +39,7 @@
       <li role="presentation"><a href="about.html">About </a></li>
       <li class="active" role="presentation"><a href="features.html">Features </a></li>
       <li role="presentation"><a href="api.html">API </a></li>
-      <li role="presentation"><a href="#">Log In</a></li>
+      <li role="presentation"><a href="https://lomis.ehealth.org.ng/login">Log In</a></li>
     </ul>
   </div>
 
