--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 <body>
 <section class="herosection">
   <div class="content-wrap">
-    <nav class="navbar navbar-default move-nav">
+    <nav class="navbar navbar-move">
     <div class="container-fluid">
     <div class="navbar-header">
     <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/logo-Inventory-orange.jpg" width="75%" class="brandlogo"></a>
-    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
+      <span class="sr-only">Toggle navigation</span>
+      <i class="fa fa-bars"></i>
+      <!-- <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span> -->
+    </button>
     </div>
 
     <div class="collapse navbar-collapse" id="navcol-1">
@@ -31,7 +37,7 @@
         <li role="presentation"><a href="about.html">About </a></li>
         <li role="presentation"><a href="features.html">Features </a></li>
         <li role="presentation"><a href="api.html">API </a></li>
-        <li role="presentation"><a href="#">Log In</a></li>
+        <li role="presentation"><a href="https://lomis.ehealth.org.ng/login">Log In</a></li>
       </ul>
     </div>
 
@@ -56,10 +62,13 @@
     <div class="modal-body text-center">
       <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-      <img src="assets/img/google-play-badge.png" width=50%>
-      <h3 class="h3">OR</h3>
-      <h4 class="h4"> SCAN QR CODE WITH YOUR PHONE </h4>
-      <img src="assets/img/static_qr_code_without_logo.jpg" width=50%>
+      <a href="https://play.google.com/store/apps/details?id=com.ehealthafrica.lomis">
+        <img src="assets/img/google-play-badge.png" width=50%>
+      </a>
+
+      <h3 class="h3">OR SCAN QR CODE WITH YOUR PHONE</h3>
+      <!-- <h4 class="h4"> SCAN QR CODE WITH YOUR PHONE </h4> -->
+      <img src="assets/img/static_qr_code_without_logo.jpg" width=30%>
       <p class="about-paragraph"> (Download a QR code scanner from your app store if you don't have one)</p>
     </div>
 
