--- a/features.html
+++ b/features.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOVE</title>
+    <title>LOMIS Stock</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700|Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/move.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -22,11 +19,11 @@
   <div class="container-fluid">
   <div class="navbar-header">
   <a class="navbar-brand navbar-link" href="index.html">
-    <img src="assets/img/logo-Inventory-orange.jpg" width="100%" class="brandlogo">
+    <img src="assets/img/lmis-logo.png" class="brandlogo">
   </a>
   <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
     <span class="sr-only">Toggle navigation</span>
-    <i class="fa fa-bars fa-border"></i>
+    <i class="fa fa-bars fa-border brand-primary"></i>
     <!-- <span class="icon-bar"></span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span> -->
@@ -35,11 +32,11 @@
 
   <div class="collapse navbar-collapse" id="navcol-1">
     <ul class="nav navbar-nav navbar-right">
-      <li role="presentation"><a href="index.html">Home </a></li>
-      <li role="presentation"><a href="about.html">About </a></li>
+      <li role="presentation"><a class="colorless" href="index.html">Home </a></li>
+      <li role="presentation"><a class="colorless" href="about.html">About </a></li>
       <li class="active" role="presentation"><a href="features.html">Features </a></li>
-      <li role="presentation"><a href="api.html">API </a></li>
-      <li role="presentation"><a href="https://lomis.ehealth.org.ng/login">Log In</a></li>
+      <li role="presentation"><a class="colorless" href="api.html">API </a></li>
+      <li role="presentation"><a class="colorless" href="https://lomis.ehealth.org.ng/login">Log In</a></li>
     </ul>
   </div>
 
@@ -127,7 +124,7 @@
 
 <!--footer-->
   <section class="web-app-section"></section>
-  <section class="footer-section">
+  <section class="footer-section text-center">
     <div class="content-wrap small"><img src="assets/img/eHealth - LogoIII.png" width="5%" class="footerlogo"><span>Proudly made in Nigeria by eHealth Africa </span></div>
   </section>
 
