--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOVE</title>
+    <title>LOMIS Stock</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700|Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/move.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -21,23 +18,23 @@
     <nav class="navbar navbar-move">
     <div class="container-fluid">
     <div class="navbar-header">
-    <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/logo-Inventory-orange.jpg" width="75%" class="brandlogo"></a>
+    <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/lmis-logo.png" class="brandlogo"></a>
     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
       <span class="sr-only">Toggle navigation</span>
-      <i class="fa fa-bars"></i>
+      <i class="fa fa-bars brand-primary"></i>
       <!-- <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span> -->
     </button>
-    </div>
+  </div>
 
     <div class="collapse navbar-collapse" id="navcol-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active" role="presentation"><a href="index.html">Home </a></li>
-        <li role="presentation"><a href="about.html">About </a></li>
-        <li role="presentation"><a href="features.html">Features </a></li>
-        <li role="presentation"><a href="api.html">API </a></li>
-        <li role="presentation"><a href="https://lomis.ehealth.org.ng/login">Log In</a></li>
+        <li role="presentation"><a class="colorless" href="about.html">About </a></li>
+        <li role="presentation"><a class="colorless" href="features.html">Features </a></li>
+        <li role="presentation"><a class="colorless" href="api.html">API </a></li>
+        <li role="presentation"><a class="colorless" href="https://lomis.ehealth.org.ng/login">Log In</a></li>
       </ul>
     </div>
 
@@ -49,35 +46,49 @@
     <h3 class="text-center h3">Logistics and Supply Chain Management for Medical Products</h3>
     <p class="text-center heroparagraph">Medical product delivery service with real-time reporting and analytics</p>
     <div class="button-div">
-      <button class="btn btn-reg blue" type="button" data-toggle="modal" data-target="#modalWrap">Download Mobile App</button>
-      <button class="btn btn-reg white" type="button"><a href="#contactUs">Request Web App Demo</a></button>
+      <button class="btn btn-reg orange" type="button" data-toggle="modal" data-target="#modalWrap">Download Mobile App</button>
+      <button class="btn btn-reg white" type="button"><a class="colorless" href="#contactUs">Request Web App Demo</a></button>
     </div>
 
     <div id="modalWrap" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+      <div class="modal-dialog">
 
-    <!-- Modal content-->
-    <div class="modal-content" height="80%">
+      <!-- Modal content-->
+        <div class="modal-content" height="80%">
 
-    <div class="modal-body text-center">
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-      <a href="https://play.google.com/store/apps/details?id=com.ehealthafrica.lomis">
-        <img src="assets/img/google-play-badge.png" width=50%>
-      </a>
+            <!-- <a href="https://play.google.com/store/apps/details?id=com.ehealthafrica.lomis">
+              <img src="assets/img/google-play-badge.png" width=50%>
+            </a>
 
-      <h3 class="h3">OR SCAN QR CODE WITH YOUR PHONE</h3>
-      <!-- <h4 class="h4"> SCAN QR CODE WITH YOUR PHONE </h4> -->
-      <img src="assets/img/static_qr_code_without_logo.jpg" width=30%>
-      <p class="about-paragraph"> (Download a QR code scanner from your app store if you don't have one)</p>
+            <h3 class="h3">OR SCAN QR CODE WITH YOUR PHONE</h3>
+            <img src="assets/img/static_qr_code_without_logo.jpg" width=30%>
+            <p class="about-paragraph"> (Download a QR code scanner from your app store if you don't have one)</p> -->
+
+            <h3 class="h3">Two ways to get the app</h3>
+            <div class="row">
+              <div class="col-sm-6">
+                <p class="about-paragraph"> 1. Click to download, or</p>
+                <a href="https://play.google.com/store/apps/details?id=com.ehealthafrica.lomis">
+                  <img src="assets/img/google-play-badge.png" width=50%>
+                </a>
+              </div>
+              <div class="col-sm-6">
+                <p class="about-paragraph"> 2. Scan* this QR code to your phone</p>
+                <img src="assets/img/static_qr_code_without_logo.jpg" width=50%>
+              </div>
+            </div>
+            <p> <em>*You'll need to download a QR code scanner from your app store if you don't have one.</em></p>
+          </div>
+
+        </div>
+
+      </div>
     </div>
 
-    </div>
-
-  </div>
-</div>
-
-  <div class="hero-image-div"><img class="img-responsive hero-image" src="assets/img/devices + labels red.png" alt="web dashboard &amp; mobile app" width="70%"></div>
+    <div class="hero-image-div"><img class="img-responsive hero-image" src="assets/img/devices + labels red.png" alt="web dashboard &amp; mobile app" width="70%"></div>
 
   </div>
 
@@ -85,64 +96,65 @@
 
 <!--Benefits-->
     <div class="benefits-section">
-    <div class="container content-wrap">
-    <div class="col-md-3 col-sm-6 benefits-column"><img src="assets/img/decision.png" class="benefits-icon">
-      <h4 class="h4 white"><strong>Decision Support</strong></h4>
-      <p>Improve planning and decision making</p>
-    </div>
+      <div class="container content-wrap">
+        <h3 class="h3 center margin-bottom-40">How LOMIS helps</h3>
+        <div class="col-md-3 col-sm-6 benefits-column"><i class="fa fa-map-signs fa-3x brand-primary"></i>
+          <h5 class="white"><strong>Decision Support</strong></h5>
+          <p>Improve planning and decision making</p>
+        </div>
 
-    <div class="col-md-3 benefits-column"><img src="assets/img/efficiency (1).png" class="benefits-icon">
-      <h4 class="h4 white"><strong>Efficiency </strong></h4>
-      <p>Manage stock, inventory and delivery more efficiently</p>
-    </div>
+        <div class="col-md-3 col-sm-6 benefits-column"><i class="fa fa-dashboard fa-3x brand-primary"></i>
+          <h5 class="white"><strong>Efficiency </strong></h5>
+          <p>Manage stock, inventory and delivery more efficiently</p>
+        </div>
 
-    <div class="col-md-3 col-sm-6 benefits-column"><img src="assets/img/nigeria-naira-currency-symbol.png" class="benefits-icon">
-      <h4 class="h4 white"><strong>Lower Costs</strong></h4>
-      <p>More cost effective than traditional delivery systems</p>
-    </div>
+        <div class="col-md-3 col-sm-6 benefits-column"><i class="fa fa-percent fa-3x brand-primary"></i>
+          <h5 class="white"><strong>Lower Costs</strong></h5>
+          <p>More cost effective than traditional delivery systems</p>
+        </div>
 
-    <div class="col-md-3 benefits-column"><img src="assets/img/nurse.png" class="benefits-icon">
-      <h4 class="h4 white"><strong>Ease </strong></h4>
-      <p>Easy for health workers and logistics providers to use</p>
-    </div>
+        <div class="col-md-3 col-sm-6 benefits-column"><i class="fa fa-user-md fa-3x brand-primary"></i>
+          <h5 class="white"><strong>Ease </strong></h5>
+          <p>Easy for health workers and logistics providers to use</p>
+        </div>
 
-    </div>
+      </div>
 
     </div>
 
 <!--Features-->
     <div class="features-section">
-    <div class="container content-wrap">
-      <h3 class="h3 center">Mobile App</h3>
-      <div class="col-sm-6 image column"><img src="assets/img/MOVE mobile.png" width="50%"></div>
-      <div class="col-sm-6">
-        <ul class="list-group">
-        <li class="list-group-item">
-          <h5><i class="fa fa-exclamation-circle icon"></i><strong>Alerts and Reporting</strong></h5><span>Receive alerts and reporting statuses on your mobile device </span></li>
-        <li class="list-group-item">
-          <h5><i class="fa fa-bar-chart icon"></i><strong>On-Device Analytics</strong></h5><span>View stock levels and buffer stock on the go </span></li>
-        <li class="list-group-item list-item">
-          <h5><i class="fa fa-cloud icon"></i><strong>Offline Capabilities</strong></h5><span>Record deliveries and stock counts offline </span></li>
-        </ul>
+      <div class="container content-wrap">
+        <h3 class="h3 center margin-bottom-40">Mobile App</h3>
+        <div class="col-sm-6 image column"><img src="assets/img/MOVE mobile.png" width="50%"></div>
+        <div class="col-sm-6">
+          <ul class="list-group">
+          <li class="list-group-item">
+            <h5><i class="fa fa-exclamation-circle icon"></i><strong>Alerts and Reporting</strong></h5><span>Receive alerts and reporting statuses on your mobile device </span></li>
+          <li class="list-group-item">
+            <h5><i class="fa fa-bar-chart icon"></i><strong>On-Device Analytics</strong></h5><span>View stock levels and buffer stock on the go </span></li>
+          <li class="list-group-item list-item">
+            <h5><i class="fa fa-cloud icon"></i><strong>Offline Capabilities</strong></h5><span>Record deliveries and stock counts offline </span></li>
+          </ul>
+        </div>
+
       </div>
 
-    </div>
+      <div class="container content-wrap">
+        <h3 class="h3 center">Web Dashboard</h3>
+        <div class="col-sm-6">
+          <ul class="list-group features-list">
+          <li class="list-group-item">
+            <h5><i class="fa fa-tasks icon"></i><strong>Stock Management Workflow</strong></h5><span>View inventory and stock reporting status in stores and at health facilities </span></li>
+          <li class="list-group-item">
+            <h5><i class="fa fa-line-chart icon"></i><strong>Data Analysis</strong></h5><span>Analyze stockout and delivery trends over time </span></li>
+          <li class="list-group-item">
+            <h5><i class="fa fa-exchange icon"></i><strong>API</strong></h5><span>Integrate MOVE with other tools or products </span></li>
+          </ul>
+        </div>
 
-    <div class="container content-wrap">
-      <h3 class="h3 center">Web Dashboard</h3>
-      <div class="col-sm-6">
-        <ul class="list-group features-list">
-        <li class="list-group-item">
-          <h5><i class="fa fa-tasks icon"></i><strong>Stock Management Workflow</strong></h5><span>View inventory and stock reporting status in stores and at health facilities </span></li>
-        <li class="list-group-item">
-          <h5><i class="fa fa-line-chart icon"></i><strong>Data Analysis</strong></h5><span>Analyze stockout and delivery trends over time </span></li>
-        <li class="list-group-item">
-          <h5><i class="fa fa-exchange icon"></i><strong>API</strong></h5><span>Integrate MOVE with other tools or products </span></li>
-        </ul>
+        <div class="col-sm-6 image column"><img src="assets/img/move web dashboard.png" width="80%"></div>
       </div>
-
-      <div class="col-sm-6 image column"><img src="assets/img/move web dashboard.png" width="80%"></div>
-    </div>
     </div>
 
     <div class="contact-section" id="contactUs">
@@ -151,22 +163,28 @@
       <p class="text-center">If you'd like a demo or more information, please fill in the form below</p>
       <form>
         <div class="form-group">
-        <label class="control-label inline">Name </label>
-          <input class="form-control input-sm inline" type="text" name="Name" placeholder="John Etim">
-          <label class="control-label inline">Email </label>
-          <input class="form-control inline" type="text" placeholder="john@eha.org">
-          <label class="control-label inline">Organization </label>
-          <input class="form-control inline" type="text" placeholder="eHA">
-          <label class="control-label inline">Message </label>
-          <input class="form-control inline" type="text" placeholder="I'd like to...">
-        <button class="btn btn-default btn-reg blue submit" type="submit">Submit </button>
+          <label>Name </label>
+          <input class="form-control" type="text" name="Name" placeholder="John Etim">
         </div>
+        <div class="form-group">
+          <label>Email </label>
+          <input class="form-control" type="text" placeholder="john@eha.org">
+        </div>
+        <div class="form-group">
+          <label>Organization </label>
+          <input class="form-control" type="text" placeholder="eHA">
+        </div>
+        <div class="form-group">
+          <label>Message </label>
+          <input class="form-control" type="text" placeholder="I'd like to...">
+        </div>
+        <div class="text-center">  <button class="btn btn-reg orange submit" type="submit">Submit </button> </div>
       </form>
     </div>
     </div>
 
 <!--Footer-->
-    <div class="footer-section">
+    <div class="footer-section text-center">
     <div class="content-wrap small">
       <img src="assets/img/eHealth - LogoIII.png" width="5%" class="footerlogo">
       <span>Proudly made in Nigeria by eHealth Africa </span>
